# roughs

./: .editorconfig  .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  vite.config.mts
client/: index.html  main.ts
client/app/: app.ts  clientConfig.ts  colorTheme.ts  styles.ts  theme.ts  tsconfig.json  vector.ts
client/desktop/: env.d.ts  tsconfig.json
client/renderer/: app.ts  index.html  renderer.ts  style.css  tsconfig.json
client/renderer/components/widgets/: button.ts  dock.ts  input.ts
client/renderer/contexts/: theme.ts
renderer/: Cargo.toml
renderer/src/: lib.rs
